indsat ny svg til lightbulb, lavet en class til tip, en mixin så farven i siden er ændret

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -87,12 +87,12 @@
         </section>
 
         <!-------------------------------Tip 1------------------------------------->
-        <section>
+        <section class="tip">
             <div class="lightbulb">
                 <h3>
                     Tip!
                 </h3>
-                <img src="img/lightbulb.svg" alt="Lyspære ikon">
+                <img src="img/lightbulb_1.svg" alt="Lyspære ikon">
             </div>
 
             <p>
@@ -125,12 +125,12 @@
         </section>
 
         <!-------------------------------Tip 2------------------------------------->
-        <section>
+        <section class="tip">
             <div class="lightbulb">
                 <h3>
                     Tip!
                 </h3>
-                <img src="img/lightbulb.svg" alt="Lyspære ikon">
+                <img src="img/lightbulb_1.svg" alt="Lyspære ikon">
             </div>
             
             <p>
