--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
     <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
         <!-------------------------------Indhold til siden------------------------------------->
 
+    <nav class="undermenu">
+        <ul>
+            <li><a href="guide.html">Vores guide</a></li>
+            <li><a href="#">Vores mission</a></li>
+            <li><a href="#">Hvor kan du gøre en forskel</a></li>
+        </ul>
+    </nav>
+
     <main>
         <section class="intro">
            <div class="intro_img"> <!--Ret filstørrelse!-->
