ændret planer, laver links i header desktop

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -19,17 +19,26 @@
         </nav>
 
         <!-------------------------------Desktop nav------------------------------------->
-       <nav class="desktop">
+        <nav class="desktop">
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
                 HundePoten
             </a>
             <div>
-                <form>
-                    <label class="visually-hidden" for="search">Søg</label>
-                    <input type="search" id="search" placeholder="Søg" required>
-                </form>
-                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                <div class="menu">
+                    <ul>
+                        <li><a href="guide.html">Guide</a></li>
+                        <li><a href="#">Mission</a></li>
+                        <li><a href="#">Støt</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <form>
+                        <label class="visually-hidden" for="search">Søg</label>
+                        <input type="search" id="search" placeholder="Søg" required>
+                    </form>
+                    <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                </div> 
             </div>
         </nav>
     </header>
