--- a/index.html
+++ b/index.html
@@ -26,25 +26,26 @@
                 HundePoten
             </a>
             <div>
-                <form>
-                    <label class="visually-hidden" for="search">Søg</label>
-                    <input type="search" id="search" placeholder="Søg" required>
-                </form>
-                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                <div class="menu">
+                    <ul>
+                        <li><a href="guide.html">Guide</a></li>
+                        <li><a href="#">Mission</a></li>
+                        <li><a href="#">Støt</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <form>
+                        <label class="visually-hidden" for="search">Søg</label>
+                        <input type="search" id="search" placeholder="Søg" required>
+                    </form>
+                    <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                </div> 
             </div>
         </nav>
     </header>
 
     <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
         <!-------------------------------Indhold til siden------------------------------------->
-
-    <nav class="undermenu">
-        <ul>
-            <li><a href="guide.html">Vores guide</a></li>
-            <li><a href="#">Vores mission</a></li>
-            <li><a href="#">Hvor kan du gøre en forskel</a></li>
-        </ul>
-    </nav>
 
     <main>
         <section class="intro">
