rettet yderligere på footeren

--- a/guide.html
+++ b/guide.html
@@ -110,13 +110,12 @@
     </main>
     <footer>
         <ul>
-            <li>Kontakt</li>
+            <li>Kontakt os</li>
             <li>
-                <a href="mailto:hundepoten@poten.dk">Send E-mail</a>
+                <a href="mailto:hundepoten@poten.dk">Send os en e-mail her!</a>
             </li>
-            <li>MMD 2024-2025</li>
-            <li>RMR</li>
         </ul>
+        <img src="img/pote_ikon.svg" alt="HundePoten logo">
     </footer>
 </body>
 </html>
