--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
             <li>
                 <a href="mailto:hundepoten@poten.dk">Send os en e-mail her!</a>
             </li>
-            <li>MMD 2024-2025</li>
-            <li>RMR</li>
         </ul>
+        <img src="img/pote_ikon.svg" alt="HundePoten logo">
     </footer>
 </body>
 </html>
