tilføjet aria til header

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -10,18 +10,22 @@
     <header>
         <!-------------------------------Mobil nav------------------------------------->
         <nav class="mobil">
-            <img src="img/bmenu.svg" alt="Menu ikon">
-            <a href="index.html">
+            <a href="#" aria-label="Aaben menu">
+                <img src="img/bmenu.svg" alt="Menu ikon">
+            </a>
+
+            <a href="index.html" aria-label="Hjem">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
-            
-            <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+            <a href="#" aria-label="Soeg">
+                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+            </a>
         </nav>
 
         <!-------------------------------Desktop nav------------------------------------->
         <nav class="desktop">
-            <a href="index.html">
-                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+            <a href="index.html" aria-label="Hjem">
+                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, som er HundePotens logo">
                 HundePoten
             </a>
             <div>
