--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
     <header>
         <!-------------------------------Mobil nav------------------------------------->
         <nav class="mobil">
-            <img src="img/bmenu.svg" alt="Menu ikon">
-            <a href="index.html">
+            <a href="#" aria-label="Aaben menu">
+                <img src="img/bmenu.svg" alt="Menu ikon">
+            </a>
+
+            <a href="index.html" aria-label="Hjem">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
-            
-            <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+            <a href="#" aria-label="Soeg">
+                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+            </a>
         </nav>
 
         <!-------------------------------Desktop nav------------------------------------->
-       <nav class="desktop">
-            <a href="index.html">
-                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+        <nav class="desktop">
+            <a href="index.html" aria-label="Hjem">
+                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, som er HundePotens logo">
                 HundePoten
             </a>
             <div>
@@ -50,7 +54,7 @@
     <main>
         <section class="intro">
            <div class="intro_img"> <!--Ret filstørrelse!-->
-                <img src="img/golden retriever hvalp.jpg" alt="billede af en golden retriever hvalp">
+                <img src="img/golden retriever hvalp.jpg" alt="billede af en golden retriever hvalp, der sidder i græs på en solskinsdag">
                 <a class="ref" href="https://www.freepik.com/free-photo/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground_12177096.htm#fromView=search&page=1&position=6&uuid=0c42d39b-f19a-4c3e-a6fc-12b2271f664b" aria-label="Billede kilde">Image by wirestock on Freepik</a>
            </div>
            <div class="intro_txt">
