små rettelser i tekst

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -15,7 +15,7 @@
             </a>
 
             <a href="index.html" aria-label="Hjem">
-                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+                <img src="img/pote_ikon.svg" alt="HundePotens logo">
             </a>
             <a href="#" aria-label="Soeg">
                 <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
@@ -25,7 +25,7 @@
         <!-------------------------------Desktop nav------------------------------------->
         <nav class="desktop">
             <a href="index.html" aria-label="Hjem">
-                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, som er HundePotens logo">
+                <img src="img/pote_ikon.svg" alt="HundePotens logo">
                 HundePoten
             </a>
             <div>
@@ -103,7 +103,7 @@
         <section class="tip">
             <div class="lightbulb">
                 <h3>
-                    Tip!
+                    Tip til træning!
                 </h3>
                 <img src="img/lightbulb_1.svg" alt="Lyspære ikon">
             </div>
@@ -141,7 +141,7 @@
         <section class="tip">
             <div class="lightbulb">
                 <h3>
-                    Tip!
+                    Tip til pleje!
                 </h3>
                 <img src="img/lightbulb_1.svg" alt="Lyspære ikon">
             </div>
