--- a/guide.html
+++ b/guide.html
@@ -15,7 +15,7 @@
             </a>
 
             <a href="index.html" aria-label="Hjem">
-                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+                <img src="img/pote_ikon.svg" alt="HundePotens logo">
             </a>
             <a href="#" aria-label="Soeg">
                 <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
@@ -25,7 +25,7 @@
         <!-------------------------------Desktop nav------------------------------------->
         <nav class="desktop">
             <a href="index.html" aria-label="Hjem">
-                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, som er HundePotens logo">
+                <img src="img/pote_ikon.svg" alt="HundePotens logo">
                 HundePoten
             </a>
             <div>
