ryddet op i billedmappen, tilføjet/erstattet tekst på siderne

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -32,8 +32,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="guide.html">Guide</a></li>
-                        <li><a href="#">Mission</a></li>
-                        <li><a href="#">Støt</a></li>
+                        <li><a href="#">Vision</a></li>
                     </ul>
                 </div>
                 <div>
