--- a/guide.html
+++ b/guide.html
@@ -32,8 +32,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="guide.html">Guide</a></li>
-                        <li><a href="#">Mission</a></li>
-                        <li><a href="#">Støt</a></li>
+                        <li><a href="#">Vision</a></li>
                     </ul>
                 </div>
                 <div>
@@ -47,12 +46,12 @@
         </nav>
     </header>
 
-    <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk" aria-hidden="true">
+    <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
 
     <main>
         <section>
             <h1>
-                Hvilken hund passer til jer?
+                I tvivl om hvilken race der passer til jer?
             </h1>
             <p>
                 Når det kommer til at vælge den perfekte hund, er der flere vigtige faktorer at overveje, herunder hundens energiniveau og pelspleje. For eksempel, hvis du overvejer en hund som en <a href="engelsk_ft_springer_spaniel.html">Springer Spaniel</a>, skal du være opmærksom på dens naturlige entusiasme og behov for regelmæssig motion og mental stimulering. En Springer Spaniel er typisk en aktiv race, der trives med udfordrende aktiviteter og træning.
@@ -66,17 +65,16 @@
                 Ved at tage hensyn til sådanne faktorer og ved at søge råd fra vores team hos Hundepoten kan du træffe en informeret beslutning om, hvorvidt en Springer Spaniel eller en anden race passer til dine behov og din livsstil. Uanset hvilken race du vælger, er vi her for at sikre, at du og din nye firbenede ven starter på det rigtige spor for et lykkeligt og sundt forhold.
             </p>
         </section>
-
+        
         <section>
-
             <h2>
-                Velkommen til vores oversigt over hunderacer
+                Oversigt over hunderacer
             </h2>
             <p>
-                Her finder du en bred vifte af forskellige hunderacer, hver med deres unikke egenskaber og behov. Uanset om du allerede har en bestemt race i tankerne eller bare er nysgerrig efter at udforske forskellige muligheder, så er du kommet til det rette sted.
+                Her på Hundepoten finder du en mangfoldig samling af forskellige hunderacer, hver med deres unikke egenskaber og behov. Uanset om du allerede har en bestemt race i tankerne eller blot er nysgerrig efter at udforske forskellige muligheder, er du kommet til det rette sted.
             </p>
             <p>
-                Vores oversigt giver dig mulighed for at lære mere om de forskellige hunderacer og deres specifikke behov og pleje. Klik blot på navnet på den race, du er interesseret i, og du vil blive ført videre til en detaljeret side med mere information om racen, herunder plejeanbefalinger, træningstips og meget mere.
+                Vores oversigt giver dig mulighed for at dykke ned i hver hunderaces karakteristika og lære mere om deres specifikke behov og pleje. Med et enkelt klik på navnet på den race, du er interesseret i, bliver du ført videre til en detaljeret side med mere information om racen, herunder plejeanbefalinger, træningstips og meget mere.
             </p>
             <p>
                 Uanset om du er på udkig efter en aktiv ledsager til lange vandreture eller en kærlig familiehund, håber vi, at vores oversigt vil hjælpe dig med at finde den perfekte kammerat til dit hjem. Så tag et kig rundt, og lad dig inspirere af de mange fantastiske hunderacer, der er derude!
@@ -111,6 +109,8 @@
                 </div>
             </div>
         </section>
+
+    
     </main>
     <footer>
         <ul>
