--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="guide.html">Guide</a></li>
-                        <li><a href="#">Mission</a></li>
-                        <li><a href="#">Støt</a></li>
+                        <li><a href="#">Vision</a></li>
                     </ul>
                 </div>
                 <div>
@@ -59,11 +58,11 @@
            </div>
            <div class="intro_txt">
                 <h1>
-                    Mangler i tips eller information omkring jeres hund?
+                    Velkommen til HundePoten
                 </h1>
 
                 <p>
-                    <strong>Så er i kommet til det rigtige sted!</strong> Her hos HundePoten har vi samlet en masse indformationer omkring træning, pleje og sundhed, som alt sammen sikre at i har en sund og rask hund.
+                    Hos os finder du en værdifuld samling af informationer om træning, pleje og sundhed, som kan hjælpe med at sikre, at din hund trives og er sund og rask. Uanset om du allerede er stolt hundeejer eller stadig overvejer at få en pelsven, er du kommet til det rigtige sted. Lad os sammen skabe et lykkeligt og sundt liv for din hund!
                 </p>
 
                 <a class="btn" href="guide.html">Se vores guide!</a>
@@ -72,11 +71,11 @@
 
         <section>
             <h2>
-                Mød HundePoten!
+                Hvem er vi?
             </h2>
             
             <p>
-                Velkommen til Hundepoten, din guide til hundesundhed, pleje og træning. Vi er en non-profit organisation dedikeret til at støtte dig i at skabe det mest opfyldende og sunde liv for din hund. Hos Hundepoten forstår vi, at hver hunderace er unik, og det er derfor, vi er her for at give skræddersyet vejledning til hver enkelt race.
+                Vi er en non-profit organisation dedikeret til at støtte dig i at skabe det mest opfyldende og sunde liv for din hund. Hos Hundepoten forstår vi, at hver hunderace er unik, og det er derfor, vi er her for at give skræddersyet vejledning til hver enkelt race.
             </p>
 
             <p>
