--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -164,19 +164,25 @@
             <h2>
                 Pelspleje
             </h2>
+            <div class="pleje">
+                <div>
+                    <p>
+                        Pelspleje er en vigtig del af at holde din engelske Springer Spaniel sund og velplejet. Med deres smukke, silkebløde pels kræver Springer Spaniels regelmæssig pleje for at opretholde en flot udseende og sund hud. Daglig børstning anbefales for at fjerne løst hår, skidt og snavs samt for at forhindre sammenfiltringer. En god kvalitetsbørste eller kam, specielt designet til hunde med middellang til lang pels, kan være en uvurderlig hjælp til denne opgave.
+                    </p>
 
-            <p>
-                Pelspleje er en vigtig del af at holde din engelske Springer Spaniel sund og velplejet. Med deres smukke, silkebløde pels kræver Springer Spaniels regelmæssig pleje for at opretholde en flot udseende og sund hud. Daglig børstning anbefales for at fjerne løst hår, skidt og snavs samt for at forhindre sammenfiltringer. En god kvalitetsbørste eller kam, specielt designet til hunde med middellang til lang pels, kan være en uvurderlig hjælp til denne opgave.
-            </p>
+                    <p>
+                        Derudover kan det være nødvendigt at trimme din Springer Spaniels pels med jævne mellemrum for at bevare dens form og forhindre overdreven hårafsætning. Dette kan gøres derhjemme med de rette værktøjer og teknikker, men mange ejere vælger også at få deres hund trimmet professionelt hos en hundefrisør.
+                    </p>
 
-            <p>
-                Derudover kan det være nødvendigt at trimme din Springer Spaniels pels med jævne mellemrum for at bevare dens form og forhindre overdreven hårafsætning. Dette kan gøres derhjemme med de rette værktøjer og teknikker, men mange ejere vælger også at få deres hund trimmet professionelt hos en hundefrisør.
-            </p>
-
-            <p>
-                Endelig er det vigtigt at huske at bade din Springer Spaniel efter behov med en mild hundeshampoo, der er skånsom mod deres følsomme hud. Overvaskning kan fjerne de naturlige olier fra deres hud og pels, så det anbefales at begrænse badning til, når det er nødvendigt, eller efter anbefaling fra din dyrlæge.
-            </p>
-    
+                    <p>
+                        Endelig er det vigtigt at huske at bade din Springer Spaniel efter behov med en mild hundeshampoo, der er skånsom mod deres følsomme hud. Overvaskning kan fjerne de naturlige olier fra deres hud og pels, så det anbefales at begrænse badning til, når det er nødvendigt, eller efter anbefaling fra din dyrlæge.
+                    </p>
+                </div>
+                <div class="illu">
+                    <img src="/img/kam.svg" alt="Illustration af en kam">
+                    <img src="/img/saks.svg" alt="Illustration af en saks">
+                </div>
+            </div>
         </section>
 
         <!-------------------------------Foder/sektion 5------------------------------------->
