Indsat img i søgefelt

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
                         <li><a href="#">Vision</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="search">
                     <form>
                         <label class="visually-hidden" for="search">Søg</label>
                         <input type="search" id="search" placeholder="Søg" required>
                     </form>
-                    <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                    <a href="#">
+                        <img src="/img/soegeikon_g.svg" alt="Lup, soegeikon">
+                    </a>
                 </div> 
             </div>
         </nav>
