tilføjet meta description

--- a/guide.html
+++ b/guide.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find den ideelle hunderace med vores oversigt. Få insiderviden om karakteristika, pleje og træning. Start din rejse mod det perfekte match i dag!">
     <title>HundePoten | Din guide til valg af hund</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
