--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HundePoten | Hjem</title>
+    <meta name="description" content="Få værdifulde tips om hundepleje, træning og sundhed. Styrk båndet med din hund gennem vigtige informationer om dens behov og humør.">
+    <title>HundePoten | Hjem</title> 
     <link rel="stylesheet" href="CSS/style.css">
-    <!--indsæt måske en description-->
+    
 </head>
 <body>
     <header>
