--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Opdag Engelsk Springer Spaniels livlige natur og venlige temperament. Få værdifulde tips om træning, pleje, sundhed og ernæring">
     <title>HundePoten | Engelsk Springer Spaniel</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
