rettet kommentarer i html

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <!-------------------------------Mobil nav------------------------------------->
+        <!--Mobil nav-->
         <nav class="mobil">
             <a href="#" aria-label="Aaben menu">
                 <img src="img/bmenu.svg" alt="Menu ikon">
@@ -23,7 +23,7 @@
             </a>
         </nav>
 
-        <!-------------------------------Desktop nav------------------------------------->
+        <!--Desktop nav-->
         <nav class="desktop">
             <a href="index.html" aria-label="Hjem">
                 <img src="img/pote_ikon.svg" alt="HundePotens logo">
@@ -51,10 +51,12 @@
 
     <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
 
-<!-------------------------------Indhold til siden------------------------------------->
+                <!--Indhold til siden-->
+
     <main>
-        <!-------------------------------Generel info-humør/sektion 1------------------------------------->
-        <section class="ES_intro"><!--Ret filstørrelse!-->
+        <!--Generel info-humør/sektion 1-->
+
+        <section class="ES_intro">
             <img src="img/charlie.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur" class="ES">
                 <h1>
                     Engelsk Springer Spaniel
@@ -77,7 +79,7 @@
                 </p>
         </section>
 
-        <!-------------------------------Træning/sektion 2------------------------------------->
+        <!--Træning/sektion 2-->
         <section>
             <h2>
                 Træning
@@ -101,7 +103,7 @@
 
         </section>
 
-        <!-------------------------------Tip 1------------------------------------->
+        <!--Tip 1-->
         <section class="tip">
             <div class="lightbulb">
                 <h3>
@@ -115,7 +117,7 @@
             </p>
         </section>
 
-        <!-------------------------------Sundhed/sektion 3------------------------------------->
+        <!--Sundhed/sektion 3-->
         <section class="sundhed">
             <h2>
                 Sundhed
@@ -139,7 +141,7 @@
             <img src="/img/charlie_2.jpg" alt="Engelsk Flat Coat springer spaniel i solen">
         </section>
 
-        <!-------------------------------Tip 2------------------------------------->
+        <!---Tip 2-->
         <section class="tip">
             <div class="lightbulb">
                 <h3>
@@ -161,7 +163,7 @@
 
         </section>
         
-        <!-------------------------------Pelspleje/sektion 4------------------------------------->
+        <!--Pelspleje/sektion 4-->
         <section>
             
             <h2>
@@ -188,7 +190,7 @@
             </div>
         </section>
 
-        <!-------------------------------Foder/sektion 5------------------------------------->
+        <!--Foder/sektion 5-->
         <section>
             <h2>
                 Hvad skal foderet indeholde?
