--- a/guide.html
+++ b/guide.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <!-------------------------------Mobil nav------------------------------------->
+        <!--Mobil nav-->
         <nav class="mobil">
             <a href="#" aria-label="Aaben menu">
                 <img src="img/bmenu.svg" alt="Menu ikon">
@@ -23,7 +23,7 @@
             </a>
         </nav>
 
-        <!-------------------------------Desktop nav------------------------------------->
+        <!--Desktop nav-->
         <nav class="desktop">
             <a href="index.html" aria-label="Hjem">
                 <img src="img/pote_ikon.svg" alt="HundePotens logo">
@@ -51,6 +51,8 @@
 
     <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
 
+                    <!--Indhold til siden-->
+
     <main>
         <section>
              
@@ -77,6 +79,7 @@
             </p>
         </section>
 
+                <!--OVersigt-->
         <section>
             <h2>
                 Oversigt over hunderacer
