--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <!-----------------------------Mobil nav------------------------------------->
+        <!--Mobil nav-->
         <nav class="mobil">
             <a href="#" aria-label="Aaben menu">
                 <img src="img/bmenu.svg" alt="Menu ikon">
@@ -24,7 +24,7 @@
             </a>
         </nav>
 
-        <!-----------------------------Desktop nav------------------------------------->
+        <!--Desktop nav-->
         <nav class="desktop">
             <a href="index.html" aria-label="Hjem">
                 <img src="img/pote_ikon.svg" alt="HundePotens logo">
@@ -51,11 +51,13 @@
     </header>
 
     <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
-        <!-----------------------------Indhold til siden------------------------------------->
+
+
+        <!--Indhold til siden-->
 
     <main>
         <section class="intro">
-           <div class="intro_img"> <!--Ret filstørrelse!-->
+           <div class="intro_img">
                 <img src="img/golden_retriever_hvalp.jpg" alt="billede af en golden retriever hvalp, der sidder i graes på en solskinsdag">
                 <a class="ref" href="https://www.freepik.com/free-photo/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground_12177096.htm#fromView=search&page=1&position=6&uuid=0c42d39b-f19a-4c3e-a6fc-12b2271f664b" aria-label="Billede kilde">Image by wirestock on Freepik</a>
            </div>
