rettet nogle filstier, tilføjet mere til footeren og stylet dette

--- a/guide.html
+++ b/guide.html
@@ -19,7 +19,7 @@
                 <img src="img/pote_ikon.svg" alt="HundePotens logo">
             </a>
             <a href="#" aria-label="Soeg">
-                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                <img src="img/soegeikon.svg" alt="Lup, soegeikon">
             </a>
         </nav>
 
@@ -42,7 +42,7 @@
                         <input type="search" id="search" placeholder="Søg" required>
                     </form>
                     <a href="#">
-                        <img src="/img/soegeikon_g.svg" alt="Lup, soegeikon">
+                        <img src="img/soegeikon_g.svg" alt="Lup, soegeikon">
                     </a>
                 </div> 
             </div>
@@ -69,7 +69,7 @@
             </p>
                    
                 <div class="guide_img">
-                    <img src="/img/sweet-pair-dog-friends-hanging-out-together-summer-day.jpg" alt="Newfoundlænder og Alaskan malamute sidder sammen i en mark">
+                    <img src="img/sweet-pair-dog-friends-hanging-out-together-summer-day.jpg" alt="Newfoundlænder og Alaskan malamute sidder sammen i en mark">
                     <a class="ref" href="https://www.freepik.com/free-photo/sweet-pair-dog-friends-hanging-out-together-summer-day_23106485.htm#fromView=search&page=1&position=19&uuid=75651261-3450-449d-b03d-a8a4201b9250">Image by DejaVu Designs on Freepik</a>
                 </div>
               </div>
