--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="img/pote_ikon.svg" alt="HundePotens logo">
             </a>
             <a href="#" aria-label="Soeg">
-                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                <img src="img/soegeikon.svg" alt="Lup, soegeikon">
             </a>
         </nav>
 
@@ -43,7 +43,7 @@
                         <input type="search" id="search" placeholder="Søg" required>
                     </form>
                     <a href="#">
-                        <img src="/img/soegeikon_g.svg" alt="Lup, soegeikon">
+                        <img src="img/soegeikon_g.svg" alt="Lup, soegeikon">
                     </a>
                 </div> 
             </div>
@@ -104,6 +104,15 @@
             <li>
                 <a href="mailto:hundepoten@poten.dk">Send os en e-mail her!</a>
             </li>
+            <li>
+                <a href="tel:+12345678">Ring til os!</a>
+            </li>
+        </ul>
+
+        <ul>
+            <li>Følg os på</li>
+            <li><a href="www.facebook.dk">Facebook</a></li>
+            <li><a href="www.instagram.dk">Instagram</a></li>
         </ul>
         <img src="img/pote_ikon.svg" alt="HundePoten logo">
     </footer>
