--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -42,7 +42,7 @@
                         <input type="search" id="search" placeholder="Søg" required>
                     </form>
                     <a href="#">
-                        <img src="/img/soegeikon_g.svg" alt="Lup, soegeikon">
+                        <img src="img/soegeikon_g.svg" alt="Lup, soegeikon">
                     </a>
                 </div> 
             </div>
@@ -184,8 +184,8 @@
                     </p>
                 </div>
                 <div class="illu">
-                    <img src="/img/kam.svg" alt="Illustration af en kam">
-                    <img src="/img/saks.svg" alt="Illustration af en saks">
+                    <img src="img/kam.svg" alt="Illustration af en kam">
+                    <img src="img/saks.svg" alt="Illustration af en saks">
                 </div>
             </div>
         </section>
