rettet footer på alle siderne

--- a/guide.html
+++ b/guide.html
@@ -33,7 +33,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="guide.html">Guide</a></li>
-                        <li><a href="#">Vision</a></li>
+                        <li><a href="#">Støt Dyrene</a></li>
                     </ul>
                 </div>
                 <div class="search">
@@ -132,6 +132,15 @@
             <li>
                 <a href="mailto:hundepoten@poten.dk">Send os en e-mail her!</a>
             </li>
+            <li>
+                <a href="tel:+12345678">Ring til os!</a>
+            </li>
+        </ul>
+
+        <ul>
+            <li>Følg os på</li>
+            <li><a href="www.facebook.dk">Facebook</a></li>
+            <li><a href="www.instagram.dk">Instagram</a></li>
         </ul>
         <img src="img/pote_ikon.svg" alt="HundePoten logo">
     </footer>
