--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="guide.html">Guide</a></li>
-                        <li><a href="#">Vision</a></li>
+                        <li><a href="#">Støt Dyrene</a></li>
                     </ul>
                 </div>
                 <div class="search">
