--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -231,7 +231,9 @@
             <li><a href="www.facebook.dk">Facebook</a></li>
             <li><a href="www.instagram.dk">Instagram</a></li>
         </ul>
-        <img src="img/pote_ikon.svg" alt="HundePoten logo">
+        <a href="index.html">
+            <img src="img/pote_ikon.svg" alt="HundePoten logo">
+        </a>
     </footer>
     
 </body>
