tilføjet en sektion omkring vacciner og registrering

--- a/guide.html
+++ b/guide.html
@@ -32,7 +32,7 @@
             <div>
                 <div class="menu">
                     <ul>
-                        <li><a href="guide.html">Guide</a></li>
+                        <li><a href="guide.html" class="aktiv">Guide</a></li>
                         <li><a href="#">Støt Dyrene</a></li>
                     </ul>
                 </div>
@@ -76,6 +76,12 @@
 
             <p>
                 Ved at tage hensyn til sådanne faktorer og ved at søge råd fra vores team hos Hundepoten kan du træffe en informeret beslutning om, hvorvidt en Springer Spaniel eller en anden race passer til dine behov og din livsstil. Uanset hvilken race du vælger, er vi her for at sikre, at du og din nye firbenede ven starter på det rigtige spor for et lykkeligt og sundt forhold.
+            </p>
+        </section>
+        <section>
+            <h2>Vacination og lovkrav</h2>
+            <p>
+                Ifølge den danske lovgivning er det obligatorisk at vaccinere hunde mod visse sygdomme for at sikre folkesundheden og dyrevelfærden. Vaccinationer mod rabies er især påkrævet, og der er fastsat specifikke regler for, hvornår og hvordan disse vaccinationer skal administreres. Udover vaccinationer er det også lovpligtigt at registrere din hund hos det centrale hunderegister i Danmark. Dette er afgørende for at sikre sporbarhed og korrekt identifikation af hunde, hvilket bidrager til at forebygge og håndtere problemer som f.eks. tabte eller stjålne dyr. Det er vigtigt at følge lovgivningen nøje og sørge for, at din hund er korrekt vaccineret og registreret for at overholde de danske regler og bidrage til samfundets sundhed og sikkerhed.
             </p>
         </section>
 
