rettet noget styling, tilføjet en ny side og kopieret header og footer ind

--- a/guide.html
+++ b/guide.html
@@ -33,7 +33,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="guide.html" class="aktiv">Guide</a></li>
-                        <li><a href="#">Støt Dyrene</a></li>
+                        <li><a href="stoetdyrene.html">Støt Dyrene</a></li>
                     </ul>
                 </div>
                 <div class="search">
