stylet ul og tilføjet en sektion på støt dyrene

--- a/stoetdyrene.html
+++ b/stoetdyrene.html
@@ -59,7 +59,7 @@
             </p>
     
          
-            <ul>
+            <ul class="stoet">
                 <li>Dette er nogle af de nationale organisationer der findes i Danmark</li>
                 <li><a href="https://www.dyrenesbeskyttelse.dk/" rel="nofollow">Dyrenes Beskyttelse</a></li>
                 <li><a href="https://anima.dk/" rel="nofollow">Anima</a></li>
