--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     
 </head>
 <body>
+
+    <ul class="dropdown">
+        <li>
+            <a href="#" class="b_toggle" aria-label="Aaben menu">
+            <img src="img/bmenu.svg" alt="Menu ikon">
+            </a>
+            <ul>
+                <li><a href="index.html">Hjem</a></li>
+                <li><a href="guide.html">Guide</a></li>
+                <li><a href="stoetdyrene.html">Støt Dyrene</a></li>
+            </ul>
+        </li>
+    </ul>
     <header>
         <!--Mobil nav-->
         <nav class="mobil">
