--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -11,15 +11,24 @@
     <header>
         <!--Mobil nav-->
         <nav class="mobil">
-            <a href="#" aria-label="Aaben menu">
-                <img src="img/bmenu.svg" alt="Menu ikon">
-            </a>
+            <ul class="dropdown">
+                <li>
+                    <a href="#" class="b_toggle" aria-label="Aaben menu">
+                    <img src="img/bmenu.svg" alt="Menu ikon">
+                    </a>
+                    <ul>
+                        <li><a href="index.html">Hjem</a></li>
+                        <li><a href="guide.html">Guide</a></li>
+                        <li><a href="stoetdyrene.html">Støt Dyrene</a></li>
+                    </ul>
+                </li>
+            </ul>
 
             <a href="index.html" aria-label="Hjem">
                 <img src="img/pote_ikon.svg" alt="HundePotens logo">
             </a>
             <a href="#" aria-label="Soeg">
-                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
+                <img src="img/soegeikon.svg" alt="Lup, soegeikon">
             </a>
         </nav>
 
