--- a/stoetdyrene.html
+++ b/stoetdyrene.html
@@ -11,9 +11,18 @@
     <header>
         <!--Mobil nav-->
         <nav class="mobil">
-            <a href="#" aria-label="Aaben menu">
-                <img src="img/bmenu.svg" alt="Menu ikon">
-            </a>
+            <ul class="dropdown">
+                <li>
+                    <a href="#" class="b_toggle" aria-label="Aaben menu">
+                    <img src="img/bmenu.svg" alt="Menu ikon">
+                    </a>
+                    <ul>
+                        <li><a href="index.html">Hjem</a></li>
+                        <li><a href="guide.html">Guide</a></li>
+                        <li><a href="stoetdyrene.html">Støt Dyrene</a></li>
+                    </ul>
+                </li>
+            </ul>
 
             <a href="index.html" aria-label="Hjem">
                 <img src="img/pote_ikon.svg" alt="HundePotens logo">
