rettet SoMe links

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
         <ul>
             <li>Følg os på</li>
-            <li><a href="www.facebook.dk">Facebook</a></li>
-            <li><a href="www.instagram.dk">Instagram</a></li>
+            <li><a href="https://www.facebook.com">Facebook</a></li>
+            <li><a href="https://www.instagram.com/">Instagram</a></li>
         </ul>
         <a href="index.html">
             <img src="img/pote_ikon.svg" alt="HundePoten logo">
